Closed Bug 370490 Opened 19 years ago Closed 19 years ago

Spidermonkey 1.6 release and HEAD fail to build with JS_C_STRINGS_ARE_UTF8 due to use of cx in jsopcode.c

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: tom, Assigned: bc)

References

Details

(Keywords: verified1.8.0.12, verified1.8.1.4)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en; rv:1.8.1.2pre) Gecko/20070122 Camino/1.1a2+ Build Identifier: Building with 'make -f Makefile.ref XCFLAGS=-DJS_C_STRINGS_ARE_UTF8' fails in jsopcode.c jsopcode.c: In function `QuoteString': jsopcode.c:506: `cx' undeclared (first use in this function) This is in a utf8-only path that reports errors. Trivial fix attached. Reproducible: Always Steps to Reproduce: 1. Check out spidermonkey 2. Build with 'make -f Makefile.ref XCFLAGS=-DJS_C_STRINGS_ARE_UTF8' 3. Build fails Actual Results: Build failed Expected Results: Build shouldn't fail The 1.6 release tarball won't build with JS_C_STRINGS_ARE_UTF8 set, and neither will HEAD.
This is a simple issue that is fixed with the attached patch. Should be applied.
Brendan has okayed another SpiderMonkey 1.6.x release. Tom, I'll assign this to you when we are ready to check things in. Thanks for the help. If you have other issues with SpiderMonkey 1.6, please speak up because it is it end of life for Gecko 1.8.0 and SpiderMonkey 1.6.x soon.
Assignee: general → bclary
Blocks: 371572
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: in-testsuite-
Comment on attachment 255202 [details] [diff] [review] use the context of sprinter applies to all three branches (with offsets).
Attachment #255202 - Flags: review?(brendan)
Attachment #255202 - Flags: approval1.8.1.3?
Attachment #255202 - Flags: approval1.8.0.11?
Comment on attachment 255202 [details] [diff] [review] use the context of sprinter Trivial fix for #ifdef'ed code, should go into next branch releases too. /be
Attachment #255202 - Flags: review?(brendan) → review+
Comment on attachment 255202 [details] [diff] [review] use the context of sprinter approved for 1.8.0.12 and 1.8.1.4, a=dveditz for release-drivers
Attachment #255202 - Flags: approval1.8.1.4?
Attachment #255202 - Flags: approval1.8.1.4+
Attachment #255202 - Flags: approval1.8.0.12?
Attachment #255202 - Flags: approval1.8.0.12+
checked into trunk jsopcode.c new revision: 3.219; previous revision: 3.218
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
checked into MOZILLA_1_8_BRANCH jsopcode.c new revision: 3.89.2.69; previous revision: 3.89.2.68
Keywords: fixed1.8.1.4
checked into MOZILLA_1_8_0_BRANCH jsopcode.c new revision: 3.89.2.8.2.11; previous revision: 3.89.2.8.2.10
Keywords: fixed1.8.0.12
verified fixed 1.8.0, 1.8.1, 1.9.0 building shell on linux with make -f Makefile.ref XCFLAGS=-DJS_C_STRINGS_ARE_UTF8
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: