Bug 370490 - Build SpiderMonkey with JS_C_STRINGS_ARE_UTF8, not part of the build, patch by Tom Insam, r=brendan